Mantenimiento Sergio
Bug PERFOMANCE (DM_NUMBER_CTOR) y regexp (RegexpSingleline)